solve the layout issue in portfolio showcase

--- a/portfolio/src/styles/pages/_portfolio.sass
+++ b/portfolio/src/styles/pages/_portfolio.sass
@@ -52,7 +52,7 @@
             column-count: 3
             padding-bottom: 2em
             column-gap: 1em
-            column-fill: auto
+            //column-fill: auto
             article.item
                 position: relative
                 height: 100%
